overlap issue Changes

--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,8 @@ tr {
     padding: 5px;
     background: white;
     border: 2px solid skyblue;
+    height: 150px;
+    overflow: scroll;
 }
 
 .month-popup div {
@@ -143,13 +145,13 @@ tr {
     padding: 10px;
   }
   .schedule-time{
-    width: 20%;
+    width: 25%;
   }
 
   .schedule-msg{
     border-left: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
-    width: 80%;
+    width: 75%;
   }
 
   .meeting-time{
@@ -184,4 +186,8 @@ tr {
     background-color: lightpink;
     display: flex;
     color:white;
+  }
+  .drag-comp{
+    background-color: paleturquoise;
+    border-radius: 10px;
   }
